fix: scope dark mode filter to comment avatars by adding pomment-avatar class

--- a/src/deprecated_styles/widget.scss
+++ b/src/deprecated_styles/widget.scss
@@ -66,7 +66,7 @@
     }
 }
 
-img {
+.pomment-avatar {
     transition: 0.2s;
     @media (prefers-color-scheme: dark) {
         filter: brightness(50%);
